# replicat

./: CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-linux.yml  build-macos.yml  build-wheels.yml  build-windows.yml  build.yml  builder.yml  ci.yml  manual.yml  release.yml  test-release.yml  test.yml
replicat/: __main__.py  __version__.py  exceptions.py  repository.py
replicat/backends/: b2.py  base.py  local.py  s3.py  s3c.py
replicat/replicat/: __init__.py  exceptions.py  repository.py
replicat/replicat/backends/: b2.py  local.py
replicat/replicat/utils/: __init__.py  adapters.py  fs.py
replicat/tests/: conftest.py  test_adapters.py  test_local.py  test_repository.py  test_utils.py
replicat/utils/: __init__.py  adapters.py  cli.py  compat.py  config.py  fs.py
scripts/: lint
src/: adapters.cpp
stubs/: _replicat_adapters.pyi
